# rowan-mcp

./: .gitignore  CLAUDE.md  FOLDER_INTEGRATION_PLAN.md  PROJECT_FOLDER_IMPLEMENTATION_SUMMARY.md  README.md  README_UNIFIED_TOOLS.md  ROWAN_MCP_TEST_QUERIES.md  ROWAN_MCP_TOOLS.md  TOOLS_DOCUMENTATION.md  check_new_md_status.py  config.env.example  dynamic_coord_generator.py  inspector_commands.md  llm_mistake_prevention_summary.md  mcp_config_example.json  monitor_job.py  openrouter_client.py  openrouter_stdio_client.py  pyproject.toml  rowan-dxt.dxt  rowan_mcp_config.json  setup_openrouter.py  test_coordinate_generation.py  test_enhanced_docking.py  test_logging.py  test_spin_states_converter.py  test_unified_management.md  tutorial.md  v2_queries.md  workflow_management_queries.md
context/quantum_chemistry/: frequencies-thermochemistry.md  geometry-optimiztion.md  methods_basis-sets_corrections.md  optimization-modes.md  tasks.md
rowan_mcp/: __init__.py  __main__.py  server.py
rowan_mcp/functions/: bde.py  descriptors.py  docking.py  electronic_properties.py  folder_management.py  fukui.py  multistage_opt.py  pka.py  redox_potential.py  tautomers.py
rowan_mcp/functions_delete/: admet.py  conformers.py  hydrogen_bond_basicity.py  system_management.py
rowan_mcp/functions_v2/: folder_management_v2.py  molecule_lookup.py  project_management_v2.py  protein_management.py  submit_basic_calculation_workflow.py  submit_batch_workflow.py  (+17 more)
src/: __main__.py  api_functions.py  http_server.py  server.py  server_backup.py  stdio_server.py  test_direct_api.py
(+24 files in other folders)
