[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rowan-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Rowan computational chemistry platform"
authors = [
    {name = "Katherine Yenko", email = "katherineyenko@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "rowan-python>=0.1.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "python-dotenv>=1.0.0",
    "pubchempy>=1.0.4",
    "rdkit>=2025.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "rowan_mcp"]

[project.scripts]
rowan-mcp = "rowan_mcp:main"
rowan-mcp-server = "rowan_mcp:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 
